--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Expeditions: The beginning",
+	"name": "Expeditions_Project",
 	"version": "0.0.1",
 	"description": "Minimalistyczny serwer gry",
 	"main": "server.js",
