--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
-	"name": "Expeditions_Project",
-	"version": "0.0.1",
-	"description": "Minimalistyczny serwer gry",
-	"main": "server.js",
-	"dependencies": {
-		"socket.io": "~2.0.3",
-		"mime": "~1.2.7"
-	},
-	"scripts": {
-		"start": "node server.js"
-	}
+  "name": "Expeditions_Project",
+  "version": "0.0.1",
+  "description": "Minimalistyczny serwer gry",
+  "main": "server.js",
+  "dependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "mocha": "^2.4.5",
+    "mongodb": "^2.1.16",
+    "morgan": "^1.7.0",
+    "object-assign":"4.1.0"
+	"socket.io": "~2.0.3",
+  },
+  "engine": {
+    "node": "*",
+    "npm": "*"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Expeditions-Team/expeditions-game.git"
+  },
+  "author": "Expeditions-Team <expeditions.game.team@gmail.com>",
+  "license": "CC-BY-1.0"
 }
